Fix text align for bulk issues update

--- a/app/assets/stylesheets/sections/issues.scss
+++ b/app/assets/stylesheets/sections/issues.scss
@@ -63,29 +63,6 @@
 @media (min-width: 800px)  { .issues_bulk_update .select2-container { min-width: 120px; }  }
 @media (min-width: 1200px) { .issues_bulk_update .select2-container { min-width: 160px; }  }
 
-.issues-holder {
-  .issues_filters {
-  }
-
-  .issues_bulk_update {
-    margin: 0;
-    form {
-      float:left;
-    }
-
-    .update_selected_issues {
-      margin-left: 4px;
-    }
-
-    .select2-container .select2-choice {
-      height: 32px;
-      line-height: 28px;
-      color: #444 !important;
-      font-weight: 500;
-    }
-  }
-}
-
 #update_status {
   width: 100px;
 }
